--- a/less/ytgrid.less
+++ b/less/ytgrid.less
@@ -362,6 +362,8 @@ h4 .btn-group {
 
 .videolist {
 	padding-bottom: 240px;
+    max-width: 80%;
+    margin: 0 10%;
 }
 
 .video-buttons {
@@ -503,6 +505,7 @@ footer {
 	background: #e2e2e2;
 	z-index: 200;
 	box-shadow: 0 -2px 2px rgba(0,0,0,0.1);
+    .transform(translateZ(0), translateZ(0));
 
 	div {
 		display: inline-block !important;
